gcc/testsuite/rust/rustc/ui/enum/issue-67945-1.rs
enum Bug<S> {
    Var = {
        let x: S = 0; // { dg-error ".E0308." "" { target *-*-* } }
        0
    },
}

fn main() {}

